--- a/src/res/css/style.css
+++ b/src/res/css/style.css
@@ -76,7 +76,7 @@ aurelienribon-ui-CompactCheckBox:disabled {
 	-ar-border-font: SquareFont plain 14;
 }
 
-#configSetupPanel {-ar-border-title: "Configuration";}
+#internetStatePanel {-ar-border-title: "Internet State";}
 #configUpdatePanel {-ar-border-title: "Project Selection";}
 #librarySelectionPanel {-ar-border-title: "Library Selection";}
 #previewPanel {-ar-border-title: "Overview";}
