--- a/src/res/css/style.css
+++ b/src/res/css/style.css
@@ -78,6 +78,7 @@ aurelienribon-ui-CompactCheckBox:disabled {
 
 #internetStatePanel {-ar-border-title: "Internet State";}
 #wifiStatePanel {-ar-border-title: "Wi-Fi State";}
+#switchStatePanel {-ar-border-title: "Switch State";}
 #configUpdatePanel {-ar-border-title: "Project Selection";}
 #librarySelectionPanel {-ar-border-title: "Library Selection";}
 #previewPanel {-ar-border-title: "Overview";}
