--- a/src/res/css/style.css
+++ b/src/res/css/style.css
@@ -79,6 +79,8 @@ aurelienribon-ui-CompactCheckBox:disabled {
 #internetStatePanel {-ar-border-title: "Internet State";}
 #wifiStatePanel {-ar-border-title: "Wi-Fi State";}
 #switchStatePanel {-ar-border-title: "Switch State";}
+#downloadChartPanel {-ar-border-title: "Download Chart";}
+#uploadChartPanel {-ar-border-title: "Upload Chart";}
 #configUpdatePanel {-ar-border-title: "Project Selection";}
 #librarySelectionPanel {-ar-border-title: "Library Selection";}
 #previewPanel {-ar-border-title: "Overview";}
