--- a/src/res/css/style.css
+++ b/src/res/css/style.css
@@ -81,6 +81,7 @@ aurelienribon-ui-CompactCheckBox:disabled {
 #switchStatePanel {-ar-border-title: "Switch State";}
 #downloadChartPanel {-ar-border-title: "Download Chart";}
 #uploadChartPanel {-ar-border-title: "Upload Chart";}
+#aboutPanel {-ar-border-title: "About Freebox v6 Monitor";}
 #configUpdatePanel {-ar-border-title: "Project Selection";}
 #librarySelectionPanel {-ar-border-title: "Library Selection";}
 #previewPanel {-ar-border-title: "Overview";}
